force-app/main/default/objects/Quote/fields/Specialty_Spa__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Spa__c</fullName>
    <description>Special type of spas that run concurrently with a normal spa. This is used so that a 2nd opportunity does not have to be created.</description>
    <label>Specialty Spa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTB</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>