force-app/main/default/objects/Quote/fields/Spiff_InEligible__c.field-meta.xml
<CustomField>
    <fullName>Spiff_InEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spiff InEligible</label>
    <type>Checkbox</type>
</CustomField>