force-app/main/default/objects/Quote/fields/StateSpaSync__c.field-meta.xml
<CustomField>
    <fullName>StateSpaSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StateSpaSync</label>
    <type>Checkbox</type>
</CustomField>