force-app/main/default/objects/Quote/fields/Team_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Team_Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the spa team will not be automatically updated. This allows for manual ovver rides to stay on.</description>
    <label>Team Manual Override</label>
    <type>Checkbox</type>
</CustomField>