force-app/main/default/objects/Quote/fields/Terms_Conditions_Custom__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_Custom__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>