force-app/main/default/objects/Quote/fields/TI_sponsored_rebates__c.field-meta.xml
<CustomField>
    <fullName>TI_sponsored_rebates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TI-sponsored rebates</label>
    <type>Checkbox</type>
</CustomField>