force-app/main/default/objects/Quote/fields/USTerms__c.field-meta.xml
<CustomField>
    <fullName>USTerms__c</fullName>
    <formula>&quot;Minimum $10K Free Freight Program. $10K per Location per&quot;&amp; 
&quot; shipment based on standard price. Shipments must be delivered within the 48 contiguous U.S. &quot;&amp; 
&quot;states and Canada metropolitan areas only. ViewSonic shall determine&quot; 
&amp;&quot; the best shipping method for the designated locations.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USTerms</label>
    <type>Text</type>
</CustomField>