force-app/main/default/objects/Quote/fields/What_devices_will_be_connected__c.field-meta.xml
<CustomField>
    <fullName>What_devices_will_be_connected__c</fullName>
    <label>Devices Connected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Devices_Connected</valueSetName>
    </valueSet>
</CustomField>