force-app/main/default/objects/Quote/recordTypes/BRrequest.recordType-meta.xml
<RecordType>
    <fullName>BRrequest</fullName>
    <active>true</active>
    <label>BRrequest</label>
</RecordType>