force-app/main/default/objects/Quote/recordTypes/Mobile_Spa_Creation.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Spa_Creation</fullName>
    <active>true</active>
    <description>This is going to start out to be rolled out to few users. They will be required to submit clean spas otherwise access will be revoked.</description>
    <label>Mobile Spa Creation</label>
</RecordType>