force-app/main/default/objects/Quote/recordTypes/New_Quote.recordType-meta.xml
<RecordType>
    <fullName>New_Quote</fullName>
    <active>true</active>
    <label>New Quote</label>
</RecordType>