force-app/main/default/objects/Quote/recordTypes/Specialty_Spa.recordType-meta.xml
<RecordType>
    <fullName>Specialty_Spa</fullName>
    <active>true</active>
    <label>Specialty Spa</label>
</RecordType>