force-app/main/default/objects/Quote/recordTypes/VSEI_Standard.recordType-meta.xml
<RecordType>
    <fullName>VSEI_Standard</fullName>
    <active>true</active>
    <label>VSEI Standard</label>
</RecordType>