force-app/main/default/objects/Quote/validationRules/Field_Changes_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Changes_After_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>not($Permission.VSA_Bid_Desk)
&amp;&amp; 
(ischanged(Name) ||
ischanged(Notes__c) ||
ischanged(OpportunityId))</errorConditionFormula>
    <errorMessage>Only Bid Desk or Admin Can Make changes to this quote. Please submit requests through resubmission notes</errorMessage>
</ValidationRule>