force-app/main/default/objects/Quote/validationRules/Spa_No_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Spa_No_Products</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.SPA_Products__c &lt; 1 &amp;&amp; isnew() &amp;&amp;  Opportunity.ApexTest__c  == false</errorConditionFormula>
    <errorMessage>You must have at least one product to create this spa. please add a product on the opportunity page.</errorMessage>
</ValidationRule>