force-app/main/default/objects/Quote/validationRules/SpaPricebook_Disiti_Need_Distis.validationRule-meta.xml
<ValidationRule>
    <fullName>SpaPricebook_Disiti_Need_Distis</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.Count_of_Distributors__c &lt; 1 &amp;&amp; isnew() &amp;&amp; text(Opportunity.Channel__c ) != &apos;Direct CDW&apos;  &amp;&amp;
text(Opportunity.Channel__c ) != &apos;Direct AV&apos;  &amp;&amp;
text(Opportunity.Channel__c ) != &apos;Direct NSP&apos;&amp;&amp;
text(Opportunity.Channel__c ) != &apos;Canada AV&apos;&amp;&amp;
not(contains(Name,&apos;Apex&apos;))&amp;&amp;  Opportunity.ApexTest__c == false</errorConditionFormula>
    <errorMessage>You must have at least one distributor to create this spa. If you are going direct, you will need to create new opportunity and in channel pricing select the correct direct deal you are selling through.</errorMessage>
</ValidationRule>