force-app/main/default/objects/Quote/validationRules/SpaPricebook_NoDistributors_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>SpaPricebook_NoDistributors_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.Count_of_Distributors__c &gt; 0 &amp;&amp; isnew() &amp;&amp; (text(Opportunity.Channel__c ) == &apos;Direct CDW&apos;  ||
text(Opportunity.Channel__c ) == &apos;Direct AV&apos;  ||
text(Opportunity.Channel__c ) == &apos;Direct NSP&apos;||
text(Opportunity.Channel__c ) == &apos;Canada AV&apos;) &amp;&amp; 
not(contains(Name,&apos;Apex&apos;))&amp;&amp;  Opportunity.ApexTest__c == false</errorConditionFormula>
    <errorMessage>You cannot have any distributors to create this spa. If you are going direct, you  need to only resellers.</errorMessage>
</ValidationRule>