force-app/main/default/objects/Quote/listViews/All_CDW_BACKORDER_SPAs.listView-meta.xml
<ListView>
    <fullName>All_CDW_BACKORDER_SPAs</fullName>
    <columns>Spa_Name__c</columns>
    <columns>Bid_Registered__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore,abc test ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <filters>
        <field>QUOTE.EXPIRATIONDATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2021</value>
    </filters>
    <label>IFP Backorder SPA</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>