force-app/main/default/objects/Quote/listViews/All_New_SPA_requests_after_2_7.listView-meta.xml
<ListView>
    <fullName>All_New_SPA_requests_after_2_7</fullName>
    <columns>Spa_Name__c</columns>
    <columns>Bid_Registered__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore,abc test ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <filters>
        <field>Resellers__c</field>
        <operation>notContain</operation>
        <value>abc test,abc something</value>
    </filters>
    <filters>
        <field>Re_Submission_Date__c</field>
        <operation>greaterThan</operation>
        <value>2/9/2022</value>
    </filters>
    <filters>
        <field>QUOTE.EXPIRATIONDATE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PriceBook__c</field>
        <operation>notContain</operation>
        <value>Latin America</value>
    </filters>
    <filters>
        <field>Spa_Request_Submitter__c</field>
        <operation>notContain</operation>
        <value>blazer,bonner,campanelli,todd smith</value>
    </filters>
    <label>All New SPA requests</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>