force-app/main/default/objects/Quote/listViews/All_SPAs_Waiting_for_review.listView-meta.xml
<ListView>
    <fullName>All_SPAs_Waiting_for_review</fullName>
    <columns>Spa_Name__c</columns>
    <columns>Bid_Registered__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore,abc test ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <filters>
        <field>Resellers__c</field>
        <operation>notContain</operation>
        <value>abc test,abc something</value>
    </filters>
    <label>All SPAs Waiting for review</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>