force-app/main/default/objects/Quote/listViews/BR_Resubmission_Notes.listView-meta.xml
<ListView>
    <fullName>BR_Resubmission_Notes</fullName>
    <columns>Resellers__c</columns>
    <columns>QUOTE.NAME</columns>
    <columns>CreatedBy</columns>
    <columns>BR_Rep_that_did_meeting__c</columns>
    <columns>End_User__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>BR_Meeting_Date__c</columns>
    <columns>List_of_Work_Activity_c__c</columns>
    <columns>Business_Reason_for_Bid_Registration__c</columns>
    <columns>Resubmission_Date__c</columns>
    <columns>Bid_Desk_Special_Notes__c</columns>
    <columns>Focus_Account__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Bid_Registered__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>QUOTE.EXPIRATIONDATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>BR Resubmission Notes</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>