force-app/main/default/objects/Quote/listViews/Copy_of_2_Waiting_for_review_jimmy.listView-meta.xml
<ListView>
    <fullName>Copy_of_2_Waiting_for_review_jimmy</fullName>
    <columns>Spa_Name__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore,abc test ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <filters>
        <field>Resubmitter__c</field>
        <operation>equals</operation>
        <value>,Giovanni,karen,ben,jason,nick,randy,jim,sonja,natalie,brian,brad,chris,michael,jay,steadman,matt,duffy,nate</value>
    </filters>
    <label>Custom view - Waiting for review - jimmy</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>