force-app/main/default/objects/Quote/listViews/Sydney_Custom_list.listView-meta.xml
<ListView>
    <fullName>Sydney_Custom_list</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>Spa_Name__c</columns>
    <columns>Bid_Registered__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore,abc test ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <filters>
        <field>Spa_Request_Submitter__c</field>
        <operation>equals</operation>
        <value>,max green,alex faris,tony bocage,christine clark,David Manesse,eric young,marc lenio,ed hamze,Paul Demsky,Michael Svoboda,Ryan Evans,Mark Rounds,Thierry Maxime,Greg Avera,Jess Randall,Michael Turley,Nick Gugliuzza,Kyle Litchfield</value>
    </filters>
    <filters>
        <field>Spa_Request_Submitter__c</field>
        <operation>equals</operation>
        <value>Kyle Milleman,Albert Rubio,Andy Dawson</value>
    </filters>
    <filters>
        <field>Resellers__c</field>
        <operation>notContain</operation>
        <value>abc test,abc something</value>
    </filters>
    <label>Sydney Custom list</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>