force-app/main/default/objects/Quote/listViews/this_week_s_approved_spa.listView-meta.xml
<ListView>
    <fullName>this_week_s_approved_spa</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Approval_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Approval_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Approved SPAs</label>
</ListView>