force-app/main/default/objects/Quote/listViews/X3_SPA_Delayed_Info.listView-meta.xml
<ListView>
    <fullName>X3_SPA_Delayed_Info</fullName>
    <columns>Spa_Name__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Re_Submission_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Spa_Request_Submitter__c</columns>
    <columns>Resubmitter__c</columns>
    <columns>RecentRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_User__c</field>
        <operation>notContain</operation>
        <value>abc test,abc ignore</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Delayed Info Missing</value>
    </filters>
    <filters>
        <field>Re_Submission_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2021</value>
    </filters>
    <label>3 SPA Delayed Info</label>
    <sharedTo>
        <role>BidDesk</role>
    </sharedTo>
</ListView>